# learn-opengl

./: CMakeLists.txt  README.md  appveyor.yml
include/: shader_s.h
include/glad/: glad.h
lib/: glfw3.lib
resources/shader/: 3.3.shader.vs
src/: glad.c
src/HelloShader/: main.cpp
src/HelloTriangle/: main.cpp
